Enable native header modification and improve interception
Adds support for native header modification during request and response interception, allowing headers to be changed without cancelling and resending requests. Updates UI warnings to clarify interception behavior and enables editing of request headers in the modal. Also refines interception logic to distinguish between header, URL, method, and body modifications for more accurate handling.

--- a/devtools/devtools.html
+++ b/devtools/devtools.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Security Proxy DevTools</title>
+    <title>Enhanced Network Tab</title>
 </head>
 <body>
     <script src="devtools.js"></script>
